name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , aeson
               , aeson-gadt-th
               , common
               , constraints-extras
               , containers
               , frontend
               , monoidal-containers
               , obelisk-backend
               , obelisk-route
               , semimap
               , signed-data-clientsession
               , text
               , time
               , vessel
               , rhyolite-common
               , signed-data
               , monad-logger
               , gargoyle-postgresql-connect
               , postgresql-simple
               , postgresql-simple-interpolate
               , resource-pool
               , rhyolite-account-backend
               , rhyolite-account-types
               , rhyolite-notify-listen
               , rhyolite-notify-listen-beam
               , psql-simple-class
               , rhyolite-backend
               , clientsession
               , beam-postgres
               , beam-automigrate
               , psql-simple-beam
  exposed-modules:
    Backend
    Backend.Listen
    Backend.Request
    Backend.View.Chatroom
    Backend.View.Messages
    Backend.Schema
    Backend.View
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
  default-extensions:
    FlexibleContexts
    FlexibleInstances
    GADTs
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    TemplateHaskell
    TypeFamilies

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -threaded -fno-show-valid-hole-fits
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , obelisk-backend
