name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , aeson
               , lens-aeson
               , lens
               , directory
               , mtl
               , aeson-gadt-th
               , bytestring
               , common
               , constraints-extras
               , containers
               , frontend
               , jose
               , monoidal-containers
               , obelisk-backend
               , obelisk-route
               , gogol
               , gogol-drive
               , semimap
               , signed-data-clientsession
               , text
               , these
               , time
               , vessel
               , rhyolite-common
               , signed-data
               , monad-logger
               , gargoyle-postgresql-connect
               , postgresql-simple
               , postgresql-simple-interpolate
               , resource-pool
               , rhyolite-account-backend
               , rhyolite-account-types
               , rhyolite-notify-listen
               , rhyolite-notify-listen-beam
               , psql-simple-class
               , rhyolite-backend
               , req
               , clientsession
               , beam-core
               , beam-postgres
               , beam-automigrate
               , psql-simple-beam
               , websockets
               , rhyolite-frontend
               , reflex
  exposed-modules:
    Backend
    Backend.Db
    Backend.Listen
    Backend.Request
    Backend.View.Chatroom
    Backend.View.Messages
    Backend.Schema
    Backend.View
    Backend.Loadtest
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
  default-extensions:
    FlexibleContexts
    FlexibleInstances
    GADTs
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    TemplateHaskell
    TypeFamilies

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -threaded -fno-show-valid-hole-fits
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , obelisk-backend
