name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , obelisk-route
               , mtl
               , text
               , time
               , rhyolite-common
               , dependent-sum-template
               -- Schema
               , database-id-class
               -- Api
               , aeson
               , aeson-gadt-th
               , constraints-extras
               -- Views
               , rhyolite-datastructures
               , vessel
               -- Auth
               , constraints
               , some
               , reflex
               , witherable
               , patch
  exposed-modules:
    Common.Api
    Common.Route
    Common.Schema
    Common.View
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
  default-extensions:
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    GADTs
    MultiParamTypeClasses
    TemplateHaskell
    TypeFamilies
    UndecidableInstances
