name: common
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , obelisk-route
               , mtl
               , text
               , time
               , rhyolite-common
               , dependent-sum-template
               -- Schema
               , rhyolite-groundhog-legacy-types
               , signed-data
               , database-id-class
               -- Api
               , aeson
               , aeson-gadt-th
               , constraints-extras
               -- Views
               , semimap
               , vessel
               -- Auth
               , constraints
               , some
               , reflex
               , witherable
               , patch
  exposed-modules:
    Common.Request
    Common.Route
    Common.Schema
    Common.View
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
  default-extensions:
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    GADTs
    MultiParamTypeClasses
    TemplateHaskell
    TypeFamilies
    UndecidableInstances
