name: common
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , aeson
               , aeson-gadt-th
               , beam-core
               , constraints
               , constraints-extras
               , dependent-sum-template
               , mtl
               , obelisk-route
               , patch
               , reflex
               , rhyolite-common
               , semimap
               , signed-data
               , some
               , text
               , time
               , vessel
               , witherable
               , rhyolite-account-types
  exposed-modules:
    Common.Request
    Common.Route
    Common.Schema
    Common.View
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
  default-extensions:
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    GADTs
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    TemplateHaskell
    TypeFamilies
    UndecidableInstances
