name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , common
               , obelisk-frontend
               , obelisk-route
               , jsaddle
               , ghcjs-dom
               , reflex-dom-core
               , ref-tf
               , rhyolite-frontend
               , obelisk-executable-config-lookup
               , obelisk-generated-static
               , text
               , data-default
               , lens
               , rhyolite-common
               , signed-data
               , rhyolite-groundhog-legacy-types
               , reflex
               , vessel
               , monoidal-containers
               , containers
               , semimap
  exposed-modules:
    Frontend
    Frontend.Authentication
    Frontend.Channel
    Frontend.Types
    Frontend.Utils
    Rhyolite.Vessel.Path
    TemplateViewer
    Templates
    Templates.Channel
    Templates.Partials.Buttons
    Templates.Partials.ChannelList
    Templates.Partials.Containers
    Templates.Partials.Headers
    Templates.Partials.Inputs
    Templates.Partials.Lists
    Templates.Partials.Message
    Templates.Partials.PasswordInput
    Templates.Partials.Searchbar
    Templates.Partials.TextInput
    Templates.Signup
    Templates.Types


  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits

  default-extensions:
    ConstraintKinds
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    TemplateHaskell

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends: base
               , common
               , obelisk-frontend
               , obelisk-route
               , reflex-dom
               , obelisk-generated-static
               , frontend
  ghc-options: -threaded -O -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -fno-show-valid-hole-fits
  if impl(ghcjs)
    ghc-options: -dedupe
    cpp-options: -DGHCJS_BROWSER
  if os(darwin)
    ghc-options: -dynamic
