name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , array
               , beam-core
               , bytestring
               , common
               , constraints-extras
               , containers
               , dependent-sum
               , dependent-sum-template
               , dependent-map
               , obelisk-frontend
               , obelisk-route
               , jsaddle
               , ghcjs-dom
               , reflex-dom-core
               , ref-tf
               , rhyolite-frontend
               , optparse-applicative
               , obelisk-executable-config-lookup
               , obelisk-generated-static
               , text
               , data-default
               , lens
               , mtl
               , rhyolite-common
               , signed-data
               , rhyolite-groundhog-legacy-types
               , reflex
               , vessel
               , monoidal-containers
               , containers
               , semimap
               , time
               , aeson
               , witherable
  exposed-modules:
    Frontend
    Frontend.Authentication
    Frontend.Chat
    Frontend.Channel
    Frontend.ChannelList
    Frontend.Cli
    Frontend.Puzzle
    Frontend.SortSelect
    Frontend.Types
    Frontend.Utils
    TemplateViewer
    Templates
    Templates.Channel
    Templates.Login
    Templates.Frame
    Templates.Partials.Buttons
    Templates.Partials.ChannelList
    Templates.Partials.Containers
    Templates.Partials.Headers
    Templates.Partials.Inputs
    Templates.Partials.Lists
    Templates.Partials.Message
    Templates.Partials.Searchbar
    Templates.PuzzleList
    Templates.Puzzle
    Templates.Types


  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits

  default-extensions:
    ConstraintKinds
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    TemplateHaskell

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends: base
               , common
               , obelisk-frontend
               , obelisk-route
               , reflex-dom
               , obelisk-generated-static
               , frontend
  ghc-options: -threaded -O -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -fno-show-valid-hole-fits
  if impl(ghcjs)
    ghc-options: -dedupe
    cpp-options: -DGHCJS_BROWSER
  if os(darwin)
    ghc-options: -dynamic
